<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">津南智慧气象</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="copyright">copyright©天津市津南区气象局</string>
    <string name="login_prompt">账号登陆</string>
    <string name="logout">退出登陆</string>
    <string name="username">账号：</string>
    <string name="password">密码：</string>
    <string name="login_deng">登</string>
    <string name="login_lu">陆</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="input_username">请输入账号</string>
    <string name="input_password">请输入密码</string>
    <string name="rainfall">降水量</string>
    <string name="pressure">气压</string>
    <string name="current_fact">当前实况</string>
    <string name="hourly_forecast">逐小时预报</string>
    <string name="weekly_forecast">一周预报</string>
    <string name="update">更新</string>
    <string name="week">周</string>
    <string name="today">今天</string>
    <string name="is_loading">正在加载...</string>
    <string name="input_city_name">请输入城市名</string>
    <string name="hot_city">市内热门</string>
    <string name="hot_national">全国热门</string>
    <string name="setting">设置</string>
    <string name="back">返回</string>
    <string name="sure_delete_cache">确定要清除缓存？</string>
    <string name="delete_cache">清除缓存</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="confirm_exit">再按一次退出</string>
    <string name="day">天</string>
    <string name="no_statics">未统计</string>
    <string name="from">自</string>
    <string name="to">至</string>
    <string name="highest_temp">日最高气温</string>
    <string name="lowest_temp">日最低气温</string>
    <string name="max_speed">日最大风速</string>
    <string name="max_fall">日最大降水量</string>
    <string name="lx_no_fall">连续无降水日数</string>
    <string name="lx_no_mai">连续霾日数</string>
    <string name="no_guizhou_warning">天津市辖区暂无预警信息发布</string>
    <string name="publish">发布</string>
    <string name="warning">预警</string>
    <string name="warning_detail">预警详情</string>
    <string name="order_channel">频道定制</string>
    <string name="order_delete">排序删除</string>
    <string name="complete">完成</string>
    <string name="switch_channel">切换频道</string>
    <string name="long_press_order">长按拖拽排序</string>
    <string name="click_add_channel">点击添加频道</string>
    <string name="city_warning">市台预警</string>
    <string name="area_warning">区台预警</string>
    <string name="warning_guide">预警指南：\n\n</string>
    <string name="table">列表</string>
    <string name="map">地图</string>
    <string name="refresh">刷新</string>
    <string name="weather_quality">空气质量：</string>
    <string name="humidity">湿度：</string>
    <string name="count_person">人阅读 | </string>
    <string name="count_pian">篇</string>
    <string name="more">更多</string>
    <string name="look_more_column">查看更多栏目</string>
    <string name="trend_temp">过去24小时温度实况：（℃）</string>
    <string name="trend_humidity">过去24小时相对湿度实况：（%）</string>
    <string name="trend_rain">过去24小时降水量实况（mm）</string>
    <string name="trend_wind">过去24小时风速实况（m/s）</string>
    <string name="trend_pressure">过去24小时气压实况（hPa）</string>
    <string name="data_isexception">暂无数据~</string>
    <string name="station_id">站点号：</string>
    
    <!--  
    <string name="tab1">天气服务</string>
    <string name="tab2">特色服务</string>
    <string name="tab3">预警信息</string>
    <string name="tab4">天气实况</string>
    <string name="tab1_channel1">调查问卷</string>
    <string name="tab1_channel2">决策快报</string>
    <string name="tab1_channel3">热点新闻</string>
    <string name="tab1_channel4">城市查询</string>
    <string name="tab1_channel5">空气质量</string>
    <string name="tab1_channel6">津南视频</string>
    <string name="tab1_channel7">物流气象</string>
    <string name="tab2_channel1">台风路径</string>
    <string name="tab2_channel2">天气上报</string>
    <string name="tab2_channel3">实景天气</string>
    <string name="tab2_channel4">等风来</string>
    <string name="tab2_channel5">生活指数</string>
    <string name="tab2_channel6">下一场雨</string>
    <string name="tab2_channel7">雷达图</string>
    <string name="tab2_channel8">卫星云图</string>
    -->
    
    <string name="setting_my_information">我的信息</string>
	<string name="setting_push">要闻推送</string>
	<string name="setting_feedback">意见反馈</string>
	<string name="setting_version">检测版本</string>
	<string name="setting_clearcache">清除缓存</string>
	<string name="setting_version_code">版本号</string>
	<string name="setting_clearcache_notice">缓存清理完成</string>
	<string name="setting_quit">退出</string>
	
	<!-- 系统升级 -->
    <string name="already_new">已经是最新版本</string>
    <string name="connect_timeout">链接超时</string>
	
    
    <!-- 单位符号 -->
    <string name="unit_percent">%</string>
    <string name="unit_mm">mm</string>
    <string name="unit_hPa">hPa</string>
    <string name="unit_degree">℃</string>
    
    <!-- 天气表 -->
    <string name="weather0">晴</string>
    <string name="weather1">多云</string>
    <string name="weather2">阴</string>
    <string name="weather3">阵雨</string>
    <string name="weather4">雷阵雨</string>
    <string name="weather5">雨夹冰雹</string>
    <string name="weather6">雨夹雪</string>
    <string name="weather7">小雨</string>
    <string name="weather8">中雨</string>
    <string name="weather9">大雨</string>
    <string name="weather10">暴雨</string>
    <string name="weather11">大暴雨</string>
    <string name="weather12">特大暴雨</string>
    <string name="weather13">阵雪</string>
    <string name="weather14">小雪</string>
    <string name="weather15">中雪</string>
    <string name="weather16">大雪</string>
    <string name="weather17">暴雪</string>
    <string name="weather18">雾</string>
    <string name="weather19">冻雨</string>
    <string name="weather20">沙尘暴</string>
    <string name="weather21">小雨-中雨</string>
    <string name="weather22">中雨-大雨</string>
    <string name="weather23">大雨-暴雨</string>
    <string name="weather24">暴雨-大暴雨</string>
    <string name="weather25">大暴雨-特大暴雨</string>
    <string name="weather26">小雪-中雪</string>
    <string name="weather27">中雪-大雪</string>
    <string name="weather28">大雪-暴雪</string>
    <string name="weather29">浮尘</string>
    <string name="weather30">扬沙</string>
    <string name="weather31">强沙尘暴</string>
    <string name="weather32">浓雾</string>
    <string name="weather33">雪</string>
    <string name="weather49">强浓雾</string>
    <string name="weather53">霾</string>
    <string name="weather54">中度霾</string>
    <string name="weather55">重度霾</string>
    <string name="weather56">严重霾</string>
    <string name="weather57">大雾</string>
    <string name="weather58">特强浓雾</string>
    
    <!-- 空气质量表 -->
    <string name="aqi0">优</string>
    <string name="aqi1">良</string>
    <string name="aqi2">轻度污染</string>
    <string name="aqi3">中度污染</string>
    <string name="aqi4">重度污染</string>
    <string name="aqi5">严重污染</string>
    
    <!-- 星期表 -->
    <string name="one">一</string>
    <string name="two">二</string>
    <string name="three">三</string>
    <string name="four">四</string>
    <string name="five">五</string>
    <string name="six">六</string>
    <string name="seven">日</string>
    
    
    <!-- umeng -->
	<string name="umeng_local_notification">本地通知</string>
	<string name="umeng_new_local_notification">新建本地通知</string>
	<string name="umeng_modify_local_notification">修改本地通知</string>
	<string name="umeng_add_local_notification">新建</string>
	<string name="umeng_create_local_notification">添加</string>
	<string name="umeng_update_local_notification">修改</string>
	<string name="umeng_clear_local_notification">清除</string>
	<string name="umeng_local_notification_title">标题</string>
	<string name="umeng_local_notification_content">内容</string>
	<string name="umeng_local_notification_ticker">提示</string>
	<string name="umeng_local_notification_datetime">时间</string>
	<string name="umeng_local_notification_repeatingnum">重复数</string>
	<string name="umeng_local_notification_repeatingunit">重复单位</string>
	<string name="umeng_local_notification_repeatinginterval">重复间隔</string>
	<string name="umeng_local_notification_specialday">节日</string>
	<string name="umeng_year">年</string>
	<string name="umeng_lunarYear">年(阴历)</string>
	<string name="umeng_month">月</string>
	<string name="umeng_lunarMonth">月(阴历)</string>
	<string name="umeng_day">日</string>
	<string name="umeng_lunarDay">日(阴历)</string>
	<string name="umeng_hour">小时</string>
	<string name="umeng_minute">分钟</string>
	<string name="umeng_second">秒</string>
	<string name="umeng_repeatingNum">重复数</string>
	<string name="umeng_repeatingUnit">重复单位</string>
	<string name="umeng_repeatingInterval">重复间隔</string>
	<string name="umeng_specialDay">节日</string>
	<string name="umeng_title">标题</string>
	<string name="umeng_content">内容</string>
	<string name="umeng_ticker">提示</string>
	<string name="umeng_flags">Flags</string>
	<string name="umeng_defaults">Defaults</string>
	<string name="umeng_smallIconDrawable">小图标</string>
	<string name="umeng_largeIconDrawable">大图标</string>
	<string name="umeng_soundDrawable">声音</string>
	<string name="umeng_playVibrate">振动</string>
	<string name="umeng_playLights">闪光</string>
	<string name="umeng_playSound">声响</string>
	<string name="umeng_screenOn">开屏</string>
	<string name="umeng_layoutId">自定义样式</string>
	<string name="umeng_layoutTitleId">自定义标题</string>
	<string name="umeng_layoutContentId">自定义内容</string>
	<string name="umeng_layoutIconId">自定义小图标</string>
	<string name="umeng_layoutIconDrawableId">自定义大图标</string>
	<string name="umeng_notificationSetting">通知设置</string>
	<string name="umeng_builderSetting">通知样式设置</string>
	<string name="umeng_repeatingNumHint">-1表示一直重复</string>
	<string name="umeng_needed">必填</string>
	<string name="umeng_search">搜索</string>
	<string name="umeng_search_text">根据通知ID或标题内容查找...</string>
	<!-- umeng -->

</resources>
