<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/umeng_top_background"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/umeng_search"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rlSearchFrameDelete"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/btnSearch"
            android:gravity="center_vertical" >

            <EditText
                android:id="@+id/etSearch"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/umeng_search_frame"
                android:hint="@string/umeng_search_text"
                android:paddingLeft="32dp"
                android:singleLine="true"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/ivDeleteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:paddingRight="20dp"
                android:src="@drawable/umeng_delete"
                android:visibility="gone" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="40dip"
            android:layout_height="30dp"
            android:text="@string/umeng_local_notification_title"
            android:textSize="15sp" />

        <TextView
            android:layout_width="160dip"
            android:layout_height="30dp"
            android:layout_marginLeft="50dip"
            android:text="@string/umeng_local_notification_content"
            android:textSize="15sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:text="@string/umeng_local_notification_datetime"
            android:textSize="15sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    </ListView>

</LinearLayout>