<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical" >

    <include
        android:id="@+id/reTitle"
        layout="@layout/layout_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none" >

        <RelativeLayout
            android:id="@+id/reMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp" >

            <RelativeLayout
                android:id="@+id/reFact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/detail_bg_color"
                android:paddingBottom="10dp" >

                <RelativeLayout
                    android:id="@+id/reLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:visibility="invisible" >

                    <ImageView
                        android:id="@+id/ivLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:src="@drawable/iv_location_white" />

                    <TextView
                        android:id="@+id/tvPosition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/ivLocation"
                        android:text="北京"
                        android:textColor="@color/white"
                        android:textSize="@dimen/level_4" />

                    <TextView
                        android:id="@+id/tvTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="08/14  15:23更新"
                        android:textColor="@color/white"
                        android:textSize="@dimen/level_5" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tvRain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/reLocation"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/corner_left_right"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="5dp"
                    android:text="距离下一场雨还有8小时，先洗洗车去"
                    android:textColor="@color/white"
                    android:textSize="@dimen/level_5"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/tvRain"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:paddingLeft="10dp" >

                        <TextView
                            android:id="@+id/tvTemp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textSize="80dp" />

                        <TextView
                            android:id="@+id/tvTempUnit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textSize="30dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/ivPhenomenon"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="right"
                            android:layout_marginRight="20dp" />

                        <TextView
                            android:id="@+id/tvPhenomenon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textSize="@dimen/level_4" />

                        <TextView
                            android:id="@+id/tvHumidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/white"
                            android:textSize="@dimen/level_4" />

                        <TextView
                            android:id="@+id/tvWind"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/white"
                            android:textSize="@dimen/level_4" />

                        <TextView
                            android:id="@+id/tvQuality"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/white"
                            android:textSize="@dimen/level_4" />
                    </LinearLayout>
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@android:style/Widget.DeviceDefault.ProgressBar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/llOperate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reFact"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dip"
                    android:paddingLeft="10dip"
                    android:paddingTop="10dip"
                    android:text="@string/setting_my_information"
                    android:textColor="@color/text_color2"
                    android:textSize="@dimen/level_3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_detail"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/iv_user" />

                    <TextView
                        android:id="@+id/tvUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dip"
                        android:textColor="@color/text_color3"
                        android:textSize="@dimen/level_3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/llFeedBack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_detail"
                        android:gravity="center_vertical"
                        android:paddingLeft="20dp"
                        android:paddingRight="10dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/setting_feedback"
                            android:textColor="@color/text_color3"
                            android:textSize="@dimen/level_3" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/iv_arrow" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llVersion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_detail"
                        android:gravity="center_vertical"
                        android:paddingLeft="20dp"
                        android:paddingRight="10dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/setting_version"
                            android:textColor="@color/text_color3"
                            android:textSize="@dimen/level_3" />

                        <TextView
                            android:id="@+id/tvVersion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:textColor="@color/blue"
                            android:textSize="@dimen/level_4" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/iv_arrow" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llVersion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_detail"
                        android:gravity="center_vertical"
                        android:paddingLeft="20dp"
                        android:paddingRight="10dp"
                        android:visibility="gone" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/setting_version"
                            android:textColor="@color/text_color3"
                            android:textSize="@dimen/level_3" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/iv_arrow" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llClearCache"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_detail"
                        android:gravity="center_vertical"
                        android:paddingLeft="20dp"
                        android:paddingRight="10dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/setting_clearcache"
                            android:textColor="@color/text_color3"
                            android:textSize="@dimen/level_3" />

                        <TextView
                            android:id="@+id/tvCache"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:textColor="@color/blue"
                            android:textSize="@dimen/level_4" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/iv_arrow" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tvLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llOperate"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/corner_logout"
                android:gravity="center"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="@dimen/level_4" />
        </RelativeLayout>
    </ScrollView>

</LinearLayout>